--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <ul class="opportunity">
     
 
-    <li class="opportunity-list"><div class="opportunity-div"><svg class="" width="64px" height="64px">
+    <li class="opportunity-list"><div class="opportunity-div"><svg  width="64" height="64">
       <use href="./images/icons.svg#icon-antenna"></use>
     </svg></div>
       <h3 class="goals">Strategy</h3>
@@ -103,18 +103,18 @@
 
   
     </li>
-    <li class="opportunity-list"><div class="opportunity-div"><svg class="" width="64px" height="64px">
+    <li class="opportunity-list"><div class="opportunity-div"><svg  width="64" height="64">
         <use href="./images/icons.svg#icon-clock"></use>
       </svg></div><h3 class="goals">Punctuality</h3>
       <p class="par">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
   
     </li>
-    <li  class="opportunity-list"><div class="opportunity-div"><svg class="" width="64px" height="64px">
+    <li  class="opportunity-list"><div class="opportunity-div"><svg  width="64" height="64">
         <use href="./images/icons.svg#icon-diagram"></use>
       </svg></div><h3 class="goals">Diligence</h3>
   <p class="par">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li  class="opportunity-list"><div class="opportunity-div"><svg class="" width="64px" height="64px">
+    <li  class="opportunity-list"><div class="opportunity-div"><svg class="" width="64" height="64">
         <use href="./images/icons.svg#icon-astronaut"></use>
       </svg></div><h3 class="goals">Technologies</h3>
     <p class="par">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -145,17 +145,17 @@
           <h3 class="guys">Mark Guerrero</h3>
           <p class="guys-page">Product Designer</p>
           <ul class="team-svg">
-            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
@@ -167,17 +167,17 @@
           <h3  class="guys">Tom Ford</h3>
           <p class="guys-page">Frontend Developer</p>
           <ul class="team-svg">
-            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
@@ -188,17 +188,17 @@
           <h3  class="guys">Camila Garcia</h3>
           <p class="guys-page">Marketing</p>
           <ul class="team-svg">
-            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
@@ -209,17 +209,17 @@
           <h3  class="guys">Daniel Wilson</h3>
           <p class="guys-page">UI Designer</p>
           <ul class="team-svg">
-            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li class="team-list"><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a>
             </li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-            <li><a class="team-links" href=""><svg class="icons" width="16px" height="16px">
+            <li><a class="team-links" href=""><svg class="icons" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
@@ -370,17 +370,17 @@
   <p class="footer-media">Social media</p>
 
   <ul class="footer-svg">
-    <li><a class="footer-link" href=""><svg class="icons" width="24px" height="24px">
+    <li class="footer-list"><a class="footer-link" href=""><svg class="icons" width="24" height="24">
       <use href="./images/icons.svg#icon-instagram"></use>
     </svg></a>
   </li>
-    <li><a class="footer-link" href=""><svg class="icons" width="24px" height="24px">
+    <li class="footer-list"><a class="footer-link" href=""><svg class="icons" width="24" height="24">
       <use href="./images/icons.svg#icon-twitter"></use>
     </svg></a></li>
-    <li><a class="footer-link" href=""><svg class="icons" width="24px" height="24px">
+    <li class="footer-list"><a class="footer-link" href=""><svg class="icons" width="24" height="24">
       <use href="./images/icons.svg#icon-facebook"></use>
     </svg></a></li>
-    <li><a class="footer-link" href=""><svg class="icons" width="24px" height="24px">
+    <li class="footer-list"><a class="footer-link" href=""><svg class="icons" width="24" height="24">
       <use href="./images/icons.svg#icon-linkedin"></use>
     </svg></a></li>
   </ul>
